magnification in FOV.getWidth and FOV.getHeight included, as well as magnification change by changing objective. interstage binning

--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/GeneralGUIComponents/HCAFLIMPluginFrame.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/GeneralGUIComponents/HCAFLIMPluginFrame.form
@@ -280,7 +280,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="sequenceSetupTabbedPane" max="32767" attributes="0"/>
+                              <Component id="sequenceSetupTabbedPane" pref="693" max="32767" attributes="0"/>
                               <Component id="HCAsequenceProgressBar" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
@@ -346,8 +346,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="progressBarPanel" max="32767" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="1" attributes="0">
                                           <Group type="102" alignment="0" attributes="0">
@@ -367,27 +366,40 @@
                                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                                                   <Group type="102" attributes="0">
                                                       <EmptySpace max="-2" attributes="0"/>
-                                                      <Component id="stopSequenceButton" max="32767" attributes="0"/>
+                                                      <Component id="stopSequenceButton" pref="139" max="32767" attributes="0"/>
                                                   </Group>
                                                   <Group type="102" alignment="0" attributes="0">
                                                       <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
                                                       <Group type="103" groupAlignment="0" attributes="0">
                                                           <Component id="experimentNameText" min="-2" max="-2" attributes="0"/>
                                                           <Component id="experimentNameField" max="32767" attributes="0"/>
-                                                          <Group type="102" attributes="0">
-                                                              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                                              <Component id="accFramesField" min="-2" pref="30" max="-2" attributes="0"/>
-                                                          </Group>
                                                       </Group>
                                                   </Group>
                                               </Group>
+                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Group type="102" attributes="0">
+                                                      <Group type="103" groupAlignment="0" attributes="0">
+                                                          <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                          <Component id="softwareBinningButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                      </Group>
+                                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                          <Component id="softwareBinningField" max="32767" attributes="0"/>
+                                                          <Component id="accFramesField" pref="30" max="32767" attributes="0"/>
+                                                      </Group>
+                                                  </Group>
+                                                  <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                                              </Group>
                                           </Group>
                                       </Group>
-                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                      <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+                                  </Group>
+                                  <Group type="102" alignment="1" attributes="0">
+                                      <Component id="progressBarPanel" max="32767" attributes="0"/>
+                                      <EmptySpace min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
                           </Group>
                       </Group>
                     </DimensionLayout>
@@ -402,6 +414,8 @@
                                       <Group type="103" groupAlignment="3" attributes="0">
                                           <Component id="snapFLIMButton" alignment="3" min="-2" max="-2" attributes="0"/>
                                           <Component id="experimentNameField" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="softwareBinningButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="softwareBinningField" alignment="3" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="3" attributes="0">
@@ -413,6 +427,7 @@
                                       <Group type="103" groupAlignment="3" attributes="0">
                                           <Component id="startSequenceButton" alignment="3" min="-2" max="-2" attributes="0"/>
                                           <Component id="stopSequenceButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                                   <Component id="seqOrderBasePanel" min="-2" max="-2" attributes="0"/>
@@ -532,6 +547,27 @@
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Name experiment"/>
                       </Properties>
+                    </Component>
+                    <Component class="javax.swing.JLabel" name="softwareBinningButton">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="Software Binning: "/>
+                      </Properties>
+                    </Component>
+                    <Component class="javax.swing.JTextField" name="softwareBinningField">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="2"/>
+                      </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="softwareBinningFieldActionPerformed"/>
+                      </Events>
+                    </Component>
+                    <Component class="javax.swing.JButton" name="jButton1">
+                      <Properties>
+                        <Property name="text" type="java.lang.String" value="jButton1"/>
+                      </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
