--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/LightPathClasses/GUIComponents/LightPathPanel.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/LightPathClasses/GUIComponents/LightPathPanel.form
@@ -444,6 +444,15 @@
                   <Component id="flimCamera" min="-2" pref="157" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                   <Component id="bfCamera" min="-2" pref="157" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <Component id="cameraPixelSize" min="-2" pref="70" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -451,10 +460,13 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
+                  <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="flimCamera" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="bfCamera" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="cameraPixelSize" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="20" max="32767" attributes="0"/>
               </Group>
@@ -477,6 +489,24 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bfCameraActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JTextField" name="cameraPixelSize">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="6.45"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cameraPixelSizeActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel5">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Camera pixel size"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="jLabel8">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="um"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
