Rename Abort button, attempt to account for camera binning in prefind with position feedback

--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/GeneralGUIComponents/HCAFLIMPluginFrame.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/GeneralGUIComponents/HCAFLIMPluginFrame.form
@@ -521,7 +521,8 @@
                     </Container>
                     <Component class="javax.swing.JToggleButton" name="stopSequenceButton">
                       <Properties>
-                        <Property name="text" type="java.lang.String" value="Stop HCA sequence"/>
+                        <Property name="text" type="java.lang.String" value="Abort prefind/acq"/>
+                        <Property name="toolTipText" type="java.lang.String" value=""/>
                       </Properties>
                       <Events>
                         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="stopSequenceButtonActionPerformed"/>
