--- a/src/ProSettingsGUI/ProSettingsPanel.form
+++ b/src/ProSettingsGUI/ProSettingsPanel.form
@@ -113,7 +113,7 @@
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace pref="118" max="32767" attributes="0"/>
+              <EmptySpace pref="135" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -648,7 +648,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="VShiftScale">
       <Properties>
-        <Property name="text" type="java.lang.String" value="1"/>
+        <Property name="text" type="java.lang.String" value="-1"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="VShiftScaleActionPerformed"/>
@@ -666,6 +666,7 @@
     </Component>
     <Component class="javax.swing.JToggleButton" name="H_V_swap">
       <Properties>
+        <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" value="H/V swap"/>
       </Properties>
       <Events>
