--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/FLIMClasses/GUIComponents/FLIMPanel.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/FLIMClasses/GUIComponents/FLIMPanel.form
@@ -455,8 +455,10 @@
             <Component class="javax.swing.JTextField" name="acquiredMaxpointField">
               <Properties>
                 <Property name="text" type="java.lang.String" value="N/A"/>
-                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="acquiredMaxpointFieldActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="findMaxPointMinField">
               <Properties>
@@ -599,7 +601,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="delayTablePanel" max="32767" attributes="0"/>
+                          <Component id="delayTablePanel" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" alignment="1" attributes="0">
@@ -735,7 +737,7 @@
                   <Layout>
                     <DimensionLayout dim="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <EmptySpace min="0" pref="128" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="140" max="32767" attributes="0"/>
                       </Group>
                     </DimensionLayout>
                     <DimensionLayout dim="1">
