Added some components to ProSettingsPanel to try out storing objective offset info in JSON format - seems to be working now, so next step will be to move these into the LightPathPanel and make sure the main panel can access the information. Then add a method to either set them manually or automatically (e.g. large sparse beads?) - 40x is default objective, so should be used as a reference perhaps?
Also added some sanity checking on slider inputs for the macros etc

--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/PrefindClasses/GUIComponents/PrefindPanel.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/PrefindClasses/GUIComponents/PrefindPanel.form
@@ -87,13 +87,11 @@
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="VarMax2" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Group type="103" alignment="3" groupAlignment="3" attributes="0">
-                                  <Component id="varTextbox2" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="varLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                              </Group>
+                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                              <Component id="varTextbox2" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="varLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="VarMax2" min="-2" max="-2" attributes="0"/>
                           <Component id="VarMin2" max="32767" attributes="0"/>
                           <Component id="VarSlider2" max="32767" attributes="0"/>
                       </Group>
